--- a/paris2024-Front/src/app/nav/nav.component.css
+++ b/paris2024-Front/src/app/nav/nav.component.css
@@ -4,13 +4,14 @@
   align-items: center;
   justify-content: space-between;
   padding: 2rem 1.5rem;
+  background-color: lightgray;
 }
 
 .brand {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 1rem;
+  gap: 3rem;
   user-select: none;
 }
 
