--- a/paris2024-Front/src/app/nav/nav.component.html
+++ b/paris2024-Front/src/app/nav/nav.component.html
@@ -1,10 +1,11 @@
 <nav class="navbar">
   <div class="brand">
     <img src="/assets/2024_Summer_Olympics_logo.svg.png" alt="logo" />
-    <h1>Paris 2024</h1>
+    <h1>Welcome {{ currentUser.name }}!</h1>
   </div>
   <div>
     <ul class="menu">
+      <li><button mat-button (click)="toSports()">Sports</button></li>
       <li><button mat-button (click)="toProfile()">Profile</button></li>
       <li><button mat-button (click)="logout()">Logout</button></li>
     </ul>
