--- a/paris2024-Front/src/app/match/match.component.html
+++ b/paris2024-Front/src/app/match/match.component.html
@@ -1,1 +1,52 @@
-<p>match works!</p>
+<div class="wrapper">
+  <div class="matchTableWrapper">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <!-- Sport Column -->
+      <ng-container matColumnDef="sport">
+        <th mat-header-cell *matHeaderCellDef>Sport</th>
+        <td mat-cell *matCellDef="let element">{{ element.sport }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="date">
+        <th mat-header-cell *matHeaderCellDef>Start Date</th>
+        <td mat-cell *matCellDef="let element">{{ element.date }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="stadium">
+        <th mat-header-cell *matHeaderCellDef>Stadium</th>
+        <td mat-cell *matCellDef="let element">{{ element.stadium }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="discipline">
+        <th mat-header-cell *matHeaderCellDef>Discipline</th>
+        <td mat-cell *matCellDef="let element">{{ element.discipline }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="seats">
+        <th mat-header-cell *matHeaderCellDef>Free Seats</th>
+        <td mat-cell *matCellDef="let element">{{ element.seats }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="price">
+        <th mat-header-cell *matHeaderCellDef>Ticket Price</th>
+        <td mat-cell *matCellDef="let element">{{ element.price }}</td>
+      </ng-container>
+
+      <ng-container *ngIf="isAdmin()" matColumnDef="sold">
+        <th mat-header-cell *matHeaderCellDef>Sold Tickets</th>
+        <td mat-cell *matCellDef="let element">{{ element.sold }}</td>
+      </ng-container>
+
+      <tr
+        mat-header-row
+        *matHeaderRowDef="displayedColumns"
+        style="background-color: lightgray"
+      ></tr>
+      <tr
+        mat-row
+        *matRowDef="let row; columns: displayedColumns"
+        class="rowStyle"
+      ></tr>
+    </table>
+  </div>
+</div>
