--- a/paris2024-Front/src/app/profile/profile.component.html
+++ b/paris2024-Front/src/app/profile/profile.component.html
@@ -22,6 +22,7 @@
           <button
             mat-flat-button
             style="background-color: lightgray; margin-left: 1rem"
+            (click)="toTickets()"
           >
             See All
           </button>
