--- a/paris2024-Front/src/app/tickets/tickets.component.html
+++ b/paris2024-Front/src/app/tickets/tickets.component.html
@@ -1,1 +1,46 @@
-<p>tickets works!</p>
+<div class="wrapper">
+  <div class="ticketableWrapper">
+    <h1>Owned Tickets</h1>
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <ng-container matColumnDef="matchId">
+        <th mat-header-cell *matHeaderCellDef>ID</th>
+        <td mat-cell *matCellDef="let element">{{ element.matchId }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="sport">
+        <th mat-header-cell *matHeaderCellDef>Sport</th>
+        <td mat-cell *matCellDef="let element">{{ element.sport }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="price">
+        <th mat-header-cell *matHeaderCellDef>Discipline</th>
+        <td mat-cell *matCellDef="let element">{{ element.price }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="amount">
+        <th mat-header-cell *matHeaderCellDef>Tickets Owned</th>
+        <td mat-cell *matCellDef="let element">{{ element.amount }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="toMatch">
+        <th mat-header-cell *matHeaderCellDef>To Match</th>
+        <td mat-cell *matCellDef="let element">
+          <button mat-button (click)="toMatch(element)" class="toMatchBtn">
+            =>
+          </button>
+        </td>
+      </ng-container>
+
+      <tr
+        mat-header-row
+        *matHeaderRowDef="displayedColumns"
+        style="background-color: lightgray"
+      ></tr>
+      <tr
+        mat-row
+        *matRowDef="let row; columns: displayedColumns"
+        class="rowStyle"
+      ></tr>
+    </table>
+  </div>
+</div>
