--- a/paris2024-Front/src/app/tickets/tickets.component.html
+++ b/paris2024-Front/src/app/tickets/tickets.component.html
@@ -13,8 +13,8 @@
       </ng-container>
 
       <ng-container matColumnDef="price">
-        <th mat-header-cell *matHeaderCellDef>Discipline</th>
-        <td mat-cell *matCellDef="let element">{{ element.price }}</td>
+        <th mat-header-cell *matHeaderCellDef>Price</th>
+        <td mat-cell *matCellDef="let element">€{{ element.price }}</td>
       </ng-container>
 
       <ng-container matColumnDef="amount">
